[depploy-13] Marketing Site: Fix TopNav on Mobile

--- a/src/components/TopNav/topNav.module.scss
+++ b/src/components/TopNav/topNav.module.scss
@@ -49,7 +49,7 @@ $top-nav-height: 60px;
   }
 
   .menu_signup_button {
-    display: flex;
+    display: none;
   }
 }
 
